force-app/main/default/objects/Salesforce_Requests__c/Salesforce_Requests__c.object-meta.xml
<CustomObject>
    <label>Salesforce Requests</label>
    <nameField>
        <displayFormat>SF-Requests-{0000}</displayFormat>
        <label>SF-Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>