force-app/main/default/objects/Salesforce_Requests__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>Salesforce_Request_User__c</referenceTo>
    <relationshipLabel>Salesforce Requests (Assigned to Lookup)</relationshipLabel>
    <relationshipName>Salesforce_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>