force-app/main/default/objects/Salesforce_Requests__c/fields/Duplicate_SF_Requests__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_SF_Requests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate SF-Requests</label>
    <referenceTo>Salesforce_Requests__c</referenceTo>
    <relationshipLabel>Salesforce Requests</relationshipLabel>
    <relationshipName>Salesforce_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>