force-app/main/default/objects/Salesforce_Requests__c/fields/Email_CC_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email CC Address</label>
    <type>Email</type>
</CustomField>