force-app/main/default/objects/Salesforce_Requests__c/fields/Fixed_by__c.field-meta.xml
<CustomField>
    <fullName>Fixed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixed by</label>
    <referenceTo>Salesforce_Request_User__c</referenceTo>
    <relationshipLabel>Salesforce Requests (Fixed by Lookup)</relationshipLabel>
    <relationshipName>Salesforce_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>