force-app/main/default/objects/Salesforce_Requests__c/fields/Fixed_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Fixed Date</label>
    <type>Date</type>
</CustomField>