force-app/main/default/objects/Salesforce_Requests__c/fields/look_up_email_cc__c.field-meta.xml
<CustomField>
    <fullName>look_up_email_cc__c</fullName>
    <formula>Assigned_to__r.Email_CC_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>look up email cc</label>
    <type>Text</type>
</CustomField>