force-app/main/default/objects/Salesforce_Requests__c/fields/Period_Testing__c.field-meta.xml
<CustomField>
    <fullName>Period_Testing__c</fullName>
    <label>Period Testing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIT</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>Pre-UAT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
                <default>true</default>
                <label>UAT</label>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>IVT</fullName>
            </value>
            <value>
                <fullName>STG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>