force-app/main/default/objects/Salesforce_Requests__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>