force-app/main/default/objects/Salesforce_Requests__c/fields/Related_to_Test_Case_Progress__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Test_Case_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Test Case Progress</label>
    <referenceTo>Test_Case_Progress__c</referenceTo>
    <relationshipLabel>Salesforce Requests</relationshipLabel>
    <relationshipName>Salesforce_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>