force-app/main/default/objects/Salesforce_Requests__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Quick win Convert Lightning</fullName>
                <isActive>false</isActive>
                <label>Account Quick win Convert Lightning</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <isActive>false</isActive>
                <label>AL</label>
            </value>
            <value>
                <fullName>AL campaign offering on CRM (AL Instant Loan)</fullName>
                <isActive>false</isActive>
                <label>AL campaign offering on CRM (AL Instant Loan)</label>
            </value>
            <value>
                <fullName>AL - Integration</fullName>
                <isActive>false</isActive>
                <label>AL - Integration</label>
            </value>
            <value>
                <fullName>BA Web View</fullName>
                <isActive>false</isActive>
                <label>BA Web View</label>
            </value>
            <value>
                <fullName>Commercial: KYC Review</fullName>
                <isActive>false</isActive>
                <label>Commercial: KYC Review</label>
            </value>
            <value>
                <fullName>Commercial: SLL Group</fullName>
                <isActive>false</isActive>
                <label>Commercial: SLL Group</label>
            </value>
            <value>
                <fullName>Commercial Int. - AL Opportunity</fullName>
                <isActive>false</isActive>
                <label>Commercial Int. - AL Opportunity</label>
            </value>
            <value>
                <fullName>Commercial Int._Custbase</fullName>
                <isActive>false</isActive>
                <label>Commercial Int. - Custbase</label>
            </value>
            <value>
                <fullName>Commercial Int. - Forecast Management</fullName>
                <isActive>false</isActive>
                <label>Commercial Int. - Forecast Management</label>
            </value>
            <value>
                <fullName>CR Migrate Contact WBG</fullName>
                <isActive>false</isActive>
                <label>CR Migrate Contact WBG</label>
            </value>
            <value>
                <fullName>CRM Rebranding</fullName>
                <isActive>false</isActive>
                <label>CRM Rebranding</label>
            </value>
            <value>
                <fullName>CRM Service Sprint 32-35</fullName>
                <isActive>false</isActive>
                <label>CRM Service Sprint 32-35</label>
            </value>
            <value>
                <fullName>CR Non-Voice: Email Suppression</fullName>
                <isActive>false</isActive>
                <label>CR Non-Voice: Email Suppression</label>
            </value>
            <value>
                <fullName>CR TMB SBO User</fullName>
                <isActive>false</isActive>
                <label>CR TMB SBO User</label>
            </value>
            <value>
                <fullName>CR Wealth Benefit Data</fullName>
                <isActive>false</isActive>
                <label>CR Wealth Benefit Data</label>
            </value>
            <value>
                <fullName>Data Partition Phase 3</fullName>
            </value>
            <value>
                <fullName>Drop Lead Integrated with Avaya</fullName>
                <isActive>false</isActive>
                <label>Drop Lead Integrated with Avaya</label>
            </value>
            <value>
                <fullName>EC Project - WS1</fullName>
                <isActive>false</isActive>
                <label>EC Project - WS1</label>
            </value>
            <value>
                <fullName>Invalid Token2</fullName>
                <isActive>false</isActive>
                <label>Invalid Token2</label>
            </value>
            <value>
                <fullName>LGS WS1</fullName>
            </value>
            <value>
                <fullName>LGS WS2</fullName>
            </value>
            <value>
                <fullName>M8 SilverLake</fullName>
                <isActive>false</isActive>
                <label>M8 SilverLake</label>
            </value>
            <value>
                <fullName>NonVoice Phase 1</fullName>
            </value>
            <value>
                <fullName>NonVoice Phase 2 Issues</fullName>
            </value>
            <value>
                <fullName>Non-Voice Social Post</fullName>
                <isActive>false</isActive>
                <label>Non-Voice Social Post</label>
            </value>
            <value>
                <fullName>OneApp</fullName>
                <isActive>false</isActive>
                <label>OneApp</label>
            </value>
            <value>
                <fullName>One App</fullName>
                <isActive>false</isActive>
                <label>One App</label>
            </value>
            <value>
                <fullName>One APP - NCB Request</fullName>
                <isActive>false</isActive>
                <label>One APP - NCB Request</label>
            </value>
            <value>
                <fullName>Opportunity - Batch SLOS</fullName>
                <isActive>false</isActive>
                <label>Opportunity - Batch SLOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>