force-app/main/default/objects/Salesforce_Requests__c/fields/Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Sandbox__c</fullName>
    <label>Sandbox</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>lgsws2</fullName>
            </value>
            <value>
                <fullName>aldevpro1</fullName>
            </value>
            <value>
                <fullName>aldevpro2</fullName>
            </value>
            <value>
                <fullName>WT244</fullName>
            </value>
            <value>
                <fullName>ALDevPro</fullName>
                <isActive>false</isActive>
                <label>ALDevPro</label>
            </value>
            <value>
                <fullName>Al21</fullName>
                <isActive>false</isActive>
                <label>Al21</label>
            </value>
            <value>
                <fullName>Mock Run</fullName>
                <isActive>false</isActive>
                <label>Mock Run</label>
            </value>
            <value>
                <fullName>RDTax</fullName>
                <isActive>false</isActive>
                <label>RDTax</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
                <isActive>false</isActive>
                <label>Sandbox</label>
            </value>
            <value>
                <fullName>Staging</fullName>
                <isActive>false</isActive>
                <label>Staging</label>
            </value>
            <value>
                <fullName>UAT2</fullName>
                <isActive>false</isActive>
                <label>UAT2</label>
            </value>
            <value>
                <fullName>oneapp</fullName>
                <isActive>false</isActive>
                <label>oneapp</label>
            </value>
            <value>
                <fullName>sm221-Automate</fullName>
                <isActive>false</isActive>
                <label>sm221-Automate</label>
            </value>
            <value>
                <fullName>sm231</fullName>
                <isActive>false</isActive>
                <label>sm231</label>
            </value>
            <value>
                <fullName>telephony2</fullName>
                <isActive>false</isActive>
                <label>telephony2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>