force-app/main/default/objects/Salesforce_Requests__c/fields/Test_by__c.field-meta.xml
<CustomField>
    <fullName>Test_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test by</label>
    <referenceTo>Salesforce_Request_User__c</referenceTo>
    <relationshipLabel>Salesforce Requests</relationshipLabel>
    <relationshipName>Salesforce_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>