force-app/main/default/objects/Salesforce_Requests__c/fields/TMB_Snow_No__c.field-meta.xml
<CustomField>
    <fullName>TMB_Snow_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Snow No./Release Noted No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>