force-app/main/default/objects/Salesforce_Requests__c/recordTypes/Closed_SF_Request.recordType-meta.xml
<RecordType>
    <fullName>Closed_SF_Request</fullName>
    <active>true</active>
    <label>Closed SF-Request</label>
</RecordType>