force-app/main/default/objects/Salesforce_Requests__c/recordTypes/SFRequest.recordType-meta.xml
<RecordType>
    <fullName>SFRequest</fullName>
    <active>true</active>
    <label>SFRequest</label>
</RecordType>