force-app/main/default/objects/Salesforce_Requests__c/validationRules/Reason_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  OR(TEXT( Status__c )= &quot;Closed with Conditions&quot; ,TEXT( Status__c )= &quot;Rejected&quot;), ISBLANK(Reason__c) )</errorConditionFormula>
    <errorMessage>Reason is required.</errorMessage>
</ValidationRule>