force-app/main/default/objects/Salesforce_Requests__c/validationRules/Root_Cause_or_Resolution_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Root_Cause_or_Resolution_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(TEXT( Status__c )= &quot;Fixed&quot;,TEXT( Status__c )= &quot;Fixed on Dev Env.&quot;),  ISBLANK(Root_Cause__c), ISBLANK(Resolution__c), ISBLANK(Fixed_by__c)   )</errorConditionFormula>
    <errorMessage>Root Cause, Resolution, and Fixed By are required when the status is &quot;Fixed&quot; or &quot;Fixed on Dev Env.&quot;</errorMessage>
</ValidationRule>