force-app/main/default/objects/Salesforce_Requests__c/listViews/All_Automate_Question_Winter_24.listView-meta.xml
<ListView>
    <fullName>All_Automate_Question_Winter_24</fullName>
    <columns>NAME</columns>
    <columns>Release__c</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Test_by__c</columns>
    <columns>Assigned_to__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Period_Testing__c</field>
        <operation>equals</operation>
        <value>Pre-UAT,UAT</value>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>Winter&apos;24 : Automate Question</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Automate Question - Winter&apos;24</label>
</ListView>