force-app/main/default/objects/Salesforce_Requests__c/listViews/All_Open_Pre_UAT_Data_Partition_Phase_3.listView-meta.xml
<ListView>
    <fullName>All_Open_Pre_UAT_Data_Partition_Phase_3</fullName>
    <columns>NAME</columns>
    <columns>Release__c</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Test_by__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>Data Partition Phase 3</value>
    </filters>
    <label>All Open Pre-UAT Data Partition Phase 3</label>
</ListView>