force-app/main/default/objects/Salesforce_Requests__c/listViews/All_Open_Pre_UAT_NonVoice_Phase_1_Issues.listView-meta.xml
<ListView>
    <fullName>All_Open_Pre_UAT_NonVoice_Phase_1_Issues</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Module__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Test_by__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Sandbox__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Period_Testing__c</field>
        <operation>equals</operation>
        <value>UAT</value>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>NonVoice Phase 1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Known Issues,Pending next CR,Closed</value>
    </filters>
    <label>All Open Pre-UAT NonVoice Phase 1 Issues</label>
</ListView>