force-app/main/default/objects/Salesforce_Requests__c/listViews/All_Open_Pre_UAT_NonVoice_Phase_2_Issues.listView-meta.xml
<ListView>
    <fullName>All_Open_Pre_UAT_NonVoice_Phase_2_Issues</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Test_by__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Sandbox__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>NonVoice Phase 2 Issues</value>
    </filters>
    <label>All Open Pre-UAT NonVoice Phase 2 Issues</label>
</ListView>