force-app/main/default/objects/Salesforce_Requests__c/listViews/All_Open_Pre_UAT_T_Performance1_2_Issues.listView-meta.xml
<ListView>
    <fullName>All_Open_Pre_UAT_T_Performance1_2_Issues</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Test_by__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Sandbox__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Period_Testing__c</field>
        <operation>equals</operation>
        <value>Pre-UAT,UAT</value>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>T-Performance 1.2</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Known Issues,Closed</value>
    </filters>
    <label>All Open Pre-UAT T-Performance1.2 Issues</label>
</ListView>